namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: war-ns
  labels:
    name: war-ns
