backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: war-backend-dp
  namespace: war-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: war-backend-dp
  strategy: {}
  template:
    metadata:
      labels:
        app: war-backend-dp
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: pass
            - name: SPRING_DATASOURCE_URL
              value: jdbc:mysql://war-db-svc:3306/war_resources
            - name: SPRING_DATASOURCE_USERNAME
              value: warlord
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: jackpoleaxe/kubiwar_backend
          name: war-backend-dp
          ports:
            - containerPort: 8080
      restartPolicy: Always
