db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: war-db-dp
  namespace: war-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: war-db-dp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: war-db-dp
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: war_resources
            - name: MYSQL_PASSWORD
              value: pass
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: warlord
          image: mysql
          livenessProbe:
            exec:
              command:
                - mysql war_resources --user=warlord --password='pass' --silent --execute "SELECT 1;"
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: war-db-dp
          ports:
            - containerPort: 3306
