frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: war-frontend-dp
  namespace: war-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: war-frontend-dp
  strategy: {}
  template:
    metadata:
      labels:
        app: war-frontend-dp
    spec:
      containers:
        - image: jackpoleaxe/kubiwar_frontend
          name: war-frontend-dp
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
