reverse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy-depl
spec:
  selector:
    matchLabels:
      app: reverse-proxy-depl
  template:
    metadata:
      labels:
        app: reverse-proxy-depl
    spec:
      containers:
      - name: reverse-proxy-depl
        image: jackpoleaxe/reverse-proxy
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
