backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: war-backend-svc
  namespace: war-ns
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: war-backend-dp
status:
  loadBalancer: {}
