db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: war-db-svc
  namespace: war-ns
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: war-db-dp
status:
  loadBalancer: {}
