ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: war-ingress
  labels:
    name: war-ingress
  namespace: war-ns
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: war-backend-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: war-frontend-svc
                port:
                  number: 80
